various fixes here and there

--- a/iclr-paper.bib
+++ b/iclr-paper.bib
@@ -65,15 +65,6 @@
   year      = {2015},
 }
 
-@article{hinton_dbn,
-  author    = {Geoffrey Hinton and Ruslan Salakhutdinov},
-  title     = {Reducing the dimensionality of data with neural networks},
-  journal   = {Science},
-  volume    = {Vol. 313},
-  pages     = {504--507},
-  year      = {2006},
-}
-
 @incollection{ilya_mt,
   author = {Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V. V},
   title = {Sequence to Sequence Learning with Neural Networks},
@@ -96,6 +87,23 @@
   booktitle = {Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing, {EMNLP} 2014},
   pages     = {1724--1734},
   year      = {2014},
+}
+
+@article{hinton_dbn,
+  author    = {Geoffrey E. Hinton and
+               Simon Osindero and
+               Yee Whye Teh},
+  title     = {A Fast Learning Algorithm for Deep Belief Nets},
+  journal   = {Neural Computation},
+  volume    = {18},
+  number    = {7},
+  pages     = {1527--1554},
+  year      = {2006},
+  url       = {http://dx.doi.org/10.1162/neco.2006.18.7.1527},
+  doi       = {10.1162/neco.2006.18.7.1527},
+  timestamp = {Thu, 17 Nov 2011 16:24:23 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/neco/HintonOT06},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
 @inproceedings{goodfellow_gan,
