Made many changes, added lots of pictures. Still have a lot to do

--- a/iclr-paper.bib
+++ b/iclr-paper.bib
@@ -247,6 +247,13 @@
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
+@inproceedings{mscoco,
+  author    = {Lin, T.Y. and Maire, M. and Belongie, S. and Hays, J. and Perona, P. and Ramanan, D. and Doll{\'a}r, P. and Zitnick, C. L.},
+  title     = {Microsoft {COCO}: Common Objects in Context},
+  booktitle = {ECCV},
+  year      = {2014},
+}
+
 @article{bahdanau_mt,
   author    = {D. Bahdanau and
                K. Cho and
